$Id$


v0.71.6		02-Sep-2005

	general:
		Due to lack of maintainers italian language support is dropped.

	mbcico:
		Changed compression state logic.

	mbfido:
		If some newsarticles are not accepted for post, don't treat
		this as fatal and clear the sendqueue.

	mbnntp:
		Removed some debug logging.
		Added leading zeros for generated msgid's.


v0.71.5		18-Aug-2005 - 02-Sep-2005

	nodelist.a:
		Clear node Hold or Down status if set in nodes setup.

	mbcico:
		Fixed crash on received m_get command.
		The binkp compression methods FZ and BZ2 are only compiled in
		if configured with --enable-experiment.

	mbfido:
		Removed debug logging for solved crash.
		Code cleanup.
		Added debug logging in rfc2ftn to track a rare problem.

	mbaff:
		Fixed a crash when announce a empty description line.

	mbdiff:
		Code cleanup.

	mball:
		Code cleanup.

	mbstat:
		Code cleanup.

	mbuser:
		Code cleanup.

	mbfile:
		Code cleanup.
		With the index command only changed areas are indexed. This
		removes the feature request for a switch per area from the
		TODO list because this solution works better.

	mbmsg:
		Code cleanup and removed dead code.

	mbout:
		Code cleanup.

	mbsebbs:
		Code cleanup.
		Changed syntax for calling mbpasswd.
		Blocked sysop to chat and page the sysop. Sysops use mbmon.
		Fixed errormessage if chatserver is not available.
		Added language prompts 29 and 30.

	mbnewusr:
		Changed syntax for calling mbpasswd.
		If we can detect the users screenlength then we don't bother
		asking the user.
		Added logging during execute of mbuseradd.
		Corrected wrong ANSI setting for new users.

	mbtask:
		Added check to some chat commands to check if the chat thread
		is running so that clients can give a proper message.

	mbsetup:
		Added node setup switch to override node Hold or Down status.
		Changed syntax for calling mbpasswd.

	mbmon:
		Fixed error if chatserver is not available.

	script:
		Added mbfile check to monthly maintenance script.

	mbpasswd: