@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align='right'><h5>Last update 09-Nov-2003</h5></div>
+<div align='right'><h5>Last update 09-Sep-2005</h5></div>
 <div align='center'><H1>MBSE BBS Setup - BBS Setup - Language Setup.</H1></div>
 
 <H3>Language introduction.</H3>
@@ -28,7 +28,7 @@ present in your local language, the BBS will fall back to the default
 language. It is therefore wise to name all menus, macro templates and 
 textfiles the same for all languages used.
 When you setup the languages for the first time, entries for English, Dutch,
-Spanish, Galego, Italian and German languages are created.
+Spanish, Galego, German, French and Chinese languages are created.
 <P>&nbsp;<p>
 
 <H3>Language setup.</H3>
